src files and others

--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>what-s-the-plan</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Solution Barbershop - Premium Grooming for the Modern Gentleman</title>
+    <meta name="description" content="Experience Solution grooming at our premium barbershop. Expert cuts, beard styling, and hot towel services. Book your appointment today." />
+    <meta name="author" content="Solution Barbershop" />
+    <meta name="keywords" content="barbershop, men's haircuts, beard trim, grooming, Solution cuts, hot towel shave" />
 
-    <meta property="og:title" content="what-s-the-plan" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="Solution Barbershop - Premium Grooming for the Modern Gentleman" />
+    <meta property="og:description" content="Experience Solution grooming at our premium barbershop. Expert cuts, beard styling, and hot towel services." />
+    <meta property="og:url" content="https://Solutionbarbershop.com" />
+    <meta property="og:image" content="https://Solutionbarbershop.com/og-image.jpg" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Solution Barbershop - Premium Grooming" />
+    <meta name="twitter:description" content="Experience Solution grooming at our premium barbershop. Expert cuts, beard styling, and hot towel services." />
+    <meta name="twitter:image" content="https://Solutionbarbershop.com/twitter-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Preload critical fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
 
   <body>
